--- a/5_TD/QL_OffPolicy.ipynb
+++ b/5_TD/QL_OffPolicy.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "# # 初始化action value表（Q表）\n",
@@ -125,12 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "import random\n",
     "# 按当前策略生成一个episode\n",
-    "def generate_episode(env, bp):\n",
+    "def generate_episode(env):\n",
     "    state, action, reward, next_state = [], [], [], []\n",
     "    done = False\n",
     "    env.reset()\n",
@@ -149,17 +149,17 @@
     "        next_state.append(ns)\n",
     "\n",
     "        s = ns\n",
-    "        bp[s] = a\n",
+    "\n",
     "\n",
     "    return state, action, reward, next_state\n",
     "\n",
     "\n",
     "# Q-learing off-policy\n",
-    "def QL_OffPolicy(env, Q, bp, tp, alpha=0.1, gamma=0.9, iteration=1000):\n",
+    "def QL_OffPolicy(env, Q, tp, alpha=0.1, gamma=0.9, iteration=1000):\n",
     "\n",
     "    for it in range(iteration):\n",
     "        # 由behavior policy（pi表示）生成一个episode\n",
-    "        state, action, reward, next_state = generate_episode(env, bp)\n",
+    "        state, action, reward, next_state = generate_episode(env)\n",
     "\n",
     "        # 用这个episode 改进target policy（用Q（s,a）中的a来找下一步最佳动作）\n",
     "        for i in range(len(state)):\n",
@@ -182,19 +182,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[  22.28375826,   24.65768153,   26.10678086,   22.26654523],\n       [  21.77225023, -100.        ,   30.35038705,   25.728873  ],\n       [  24.27194111,   35.45485216,   13.69145173,   29.84258489],\n       [  20.43791122,  -99.91404955,   13.29525104,   10.37543388],\n       [  24.06387781,   28.87317246, -100.        ,   21.00631273],\n       [   0.        ,    0.        ,    0.        ,    0.        ],\n       [ -98.17519964,   42.01999809,  -97.97244404,   24.57666906],\n       [   0.        ,    0.        ,    0.        ,    0.        ],\n       [  27.0961792 ,  -99.99950781,   34.02763554,   20.11626837],\n       [  17.20183697,   28.25535289,   41.49847325,  -98.66972054],\n       [  21.69392273,   56.33704925,  -94.1850263 ,   20.82504165],\n       [   0.        ,    0.        ,    0.        ,    0.        ],\n       [   0.        ,    0.        ,    0.        ,    0.        ],\n       [ -83.3228183 ,   20.2887714 ,   42.00166339,   15.20065608],\n       [  14.8756765 ,   29.40760839,   83.3228183 ,   19.70324023],\n       [   0.        ,    0.        ,    0.        ,    0.        ]])"
+      "text/plain": "array([[  14.15103533,   12.7478337 ,   17.38046464,   14.19255239],\n       [  13.74861543, -100.        ,   21.10949378,   16.73470516],\n       [  15.06160572,   27.1164961 ,    8.74604141,   17.68269725],\n       [  14.65902204,  -99.91404955,    5.78750498,    5.23830291],\n       [  11.39761823,   16.01192086, -100.        ,   13.59040542],\n       [   0.        ,    0.        ,    0.        ,    0.        ],\n       [ -98.52191171,   39.83853059,  -97.4968445 ,    7.91645935],\n       [   0.        ,    0.        ,    0.        ,    0.        ],\n       [  12.61822731,  -99.99955703,   21.02531964,    9.8528321 ],\n       [   7.31128261,   14.17197169,   34.37921013,  -99.03022627],\n       [  10.46026514,   57.93136021,  -93.53891811,   18.59412605],\n       [   0.        ,    0.        ,    0.        ,    0.        ],\n       [   0.        ,    0.        ,    0.        ,    0.        ],\n       [ -84.99053647,   15.35688285,   23.17966523,   11.97278965],\n       [  10.75730108,   42.17806888,   77.12320755,   19.66775913],\n       [   0.        ,    0.        ,    0.        ,    0.        ]])"
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Q, tp = QL_OffPolicy(env, Q, bp, tp)\n",
+    "Q, tp = QL_OffPolicy(env, Q, tp)\n",
     "Q"
    ],
    "metadata": {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "import time\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "outputs": [
     {
      "data": {
