--- a/8_ActorCrtic/QAC.ipynb
+++ b/8_ActorCrtic/QAC.ipynb
@@ -3,14 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# REINFORCE算法\n",
-    "## 1.环境设置\n",
-    "本次环境设置\n",
-    "代理agent\n",
-    "- 停止条件：撞墙（可去）-100分，掉坑-100分，到达终点+100分\n",
-    "- 每走一步-1分\n",
-    "- gamma=0.99，学习率（步长）alpha=0.01\n",
-    "- 训练轮数2000轮"
+    "# QAC算法\n",
+    "## 1.环境设置"
    ],
    "metadata": {
     "collapsed": false
@@ -18,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "import random\n",
@@ -54,10 +48,7 @@
     "\n",
     "        # 判断是否撞墙\n",
     "        if state == current_state:\n",
-    "            reward = -100  # 撞墙扣10分\n",
-    "            # 相比于之前的实验，添加撞墙也会停止\n",
-    "            # 若不添加，agent就会一直撞墙，也不敢往其他地方走\n",
-    "            # over = True\n",
+    "            reward = -10  # 撞墙扣100分\n",
     "\n",
     "        #走一步扣一分,逼迫机器人尽快结束游戏\n",
     "        if not over:\n",
@@ -65,11 +56,11 @@
     "\n",
     "        #掉坑扣100分，游戏它本身规则就是掉坑就停止\n",
     "        if over and reward == 0:\n",
-    "            reward = -100\n",
+    "            reward = -10\n",
     "\n",
     "        # 判断是否到达终点\n",
     "        if over and reward == 1:  # 终点奖励本来就是1\n",
-    "            reward = 100  # 到达终点加10分\n",
+    "            reward = 10  # 到达终点加10分\n",
     "\n",
     "        return state, reward, over\n",
     "\n",
@@ -87,79 +78,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 2.REINFORCE算法代理的设置\n",
-    "算法核心公式\n",
-    "$$\n",
-    "\\theta_{t+1} =\\theta_{t}+\\alpha\\nabla_{\\theta}\\ln\\pi(a_t|s_t,\\theta_t)q_{t}(s_t,a_t)\n",
-    "$$\n",
-    "其中，\n",
-    "- $\\theta$表示权重\n",
-    "- $\\alpha$表示学习率\n",
-    "- $\\nabla_{\\theta}\\ln\\pi(a_t|s_t,\\theta_t)$表示权重的梯度，本次实验使用线性方法并采用softmax得到\n",
-    "- $q_{t}(s_t,a_t)$当前状态的动作值"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
-   "source": [
-    "class REINFORCEAgent:\n",
-    "    def __init__(self, gameEnv, iterationNum=2000, epsilon=0.1, gamma=0.99, alpha=0.01):\n",
-    "        self.Env = gameEnv\n",
-    "        self.state_size = gameEnv.observation_space.n\n",
-    "        self.action_size = gameEnv.action_space.n\n",
-    "        self.iterNum = iterationNum\n",
-    "        self.epsilon = epsilon\n",
-    "        self.gamma = gamma\n",
-    "        self.alpha = alpha\n",
-    "\n",
-    "        # 定义策略权重θ\n",
-    "        self.theta = np.zeros((16, 4))\n",
-    "\n",
-    "    def select_action(self, current_state):\n",
-    "        if random.random() < self.epsilon:\n",
-    "            return random.randrange(self.action_size)\n",
-    "        else:\n",
-    "            current_state_vector = np.eye(self.state_size)[current_state].reshape(-1, 1)\n",
-    "            return np.argmax(self.theta.T @ current_state_vector)\n",
-    "\n",
-    "    def generate_episode(self):\n",
-    "        state_list, action_list, reward_list, next_state_list = [], [], [], []\n",
-    "        done = False\n",
-    "        s = self.Env.reset()\n",
-    "        while not done:\n",
-    "            a = self.select_action(s)\n",
-    "            ns, r, done = self.Env.step(a)\n",
-    "            state_list.append(s)\n",
-    "            action_list.append(a)\n",
-    "            reward_list.append(r)\n",
-    "            next_state_list.append(ns)\n",
-    "            s = ns\n",
-    "        return state_list, action_list, reward_list, next_state_list\n",
-    "\n",
-    "    def Training(self):\n",
-    "        for k in range(self.iterNum):\n",
-    "            state_list, action_list, reward_list, next_state_list = self.generate_episode()\n",
-    "            Qsa = 0\n",
-    "            for t in range(len(state_list)):\n",
-    "                # 值更新\n",
-    "                Qsa += self.gamma ** (k - t) * reward_list[t]\n",
-    "                # 策略更新\n",
-    "                state_vector = np.eye(self.state_size)[state_list[t]].reshape(-1, 1)\n",
-    "                scores = self.theta.T @ state_vector\n",
-    "                probs = np.exp(scores) / np.sum(np.exp(scores))  # softmax 概率\n",
-    "                # 将 probs 的形状调整为与 state_vector 相匹配\n",
-    "                grad_ln_pi = state_vector - state_vector * probs.T# 策略梯度 (线性策略函数)\n",
-    "                grad_ln_pi = grad_ln_pi[:, 0]\n",
-    "                # 更新策略参数 theta\n",
-    "                self.theta[:, action_list[t]] += self.alpha * Qsa * grad_ln_pi\n",
-    "            if (k+1) % 100 == 0:\n",
-    "                print(f\"Episode {k}, Total reward: {sum(reward_list)}\")\n",
-    "        return self.theta"
+    "## 2.对于使用基于函数形式和使用基于表格形式的参数设置个人理解\n",
+    "- 对于较小规模的游戏，例如本案例中使用的4x4大小的冰湖游戏，其权重参数设置的形状为(16,4)的矩阵和基于表格形式设置的二维Q值表(16x4)，其实是一样的。只是计算的时候，基于函数形式使用的是向量点乘计算，基于表格形式使用的是通过读取二维表每一个状态对应的每一个动作的Q值来计算。\n",
+    "- 对于规模较大的游戏，使用基于表格形式，通过读取二维表每一个参数进行计算，就会非常耗时。此时引入神经网络（如CNN）来提取更为有用的特征，对原本多状态进行降维处理，并由于是矩阵点乘计算很快，所以此时使用基于函数形式就会很高效。\n",
+    "- 并且神经网络可以学习状态之间的潜在关系，对未见过的状态做出更合理的预测，而表格形式只能死记硬背，缺乏泛化能力。"
    ],
    "metadata": {
     "collapsed": false
@@ -168,7 +90,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 3.模型的训练与结果展示"
+    "## 3.QAC Agent的设置\n",
+    "训练采用线性函数近似"
    ],
    "metadata": {
     "collapsed": false
@@ -176,39 +99,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
+   "outputs": [],
+   "source": [
+    "class QACAgent:\n",
+    "    def __init__(self, gameEnv, episodes=1000, gamma=0.9, epsilon=0.1, alpha=0.1):\n",
+    "        self.state_dim = gameEnv.observation_space.n\n",
+    "        self.action_dim = gameEnv.action_space.n\n",
+    "        self.gamma = gamma\n",
+    "        self.alpha_w = alpha\n",
+    "        self.alpha_t = alpha\n",
+    "        self.epsilon = epsilon\n",
+    "        self.Env = gameEnv\n",
+    "        self.episodes = episodes\n",
+    "        # 统计每一个状态下每一个动作下的状态值\n",
+    "        self.weights = np.zeros((self.state_dim, self.action_dim))\n",
+    "        # 统计每个状态采取一个动作的概率\n",
+    "        self.theta = np.ones((self.state_dim, self.action_dim)) * 0.25\n",
+    "\n",
+    "    def select_action(self, current_state_vector):\n",
+    "        if random.random() < self.epsilon:\n",
+    "            return random.randrange(self.action_dim)\n",
+    "        else:\n",
+    "            return np.argmax(self.theta.T @ current_state_vector)\n",
+    "\n",
+    "    def Training(self):\n",
+    "        for k in range(self.episodes):\n",
+    "            # 一步一步生成episode\n",
+    "            # 生成初始状态向量\n",
+    "            current_state = self.Env.reset()\n",
+    "            done = False\n",
+    "            total_reward = 0\n",
+    "            while not done:\n",
+    "\n",
+    "                # 获取当前动作\n",
+    "                current_vector = np.eye(self.state_dim)[current_state].reshape(-1, 1)\n",
+    "                current_action = self.select_action(current_vector)\n",
+    "                # 获得下一步数据\n",
+    "                next_state, reward, done = self.Env.step(current_action)\n",
+    "                # 得到下一个动作\n",
+    "                next_vector = np.eye(self.state_dim)[next_state].reshape(-1, 1)\n",
+    "                next_action = self.select_action(next_vector)\n",
+    "\n",
+    "                # Critic（值估计）\n",
+    "                td_target = reward + self.gamma * np.dot(next_vector.T, self.weights[:, next_action])\n",
+    "                td_error = td_target - np.dot(current_vector.T, self.weights[:, current_action])\n",
+    "                # 更新权重\n",
+    "                self.weights[:, current_action] += self.alpha_w * (td_error * current_vector).flatten()\n",
+    "\n",
+    "                # Actor(策略更新)\n",
+    "                Qsa = np.dot(current_vector.T, self.weights[:, current_action])   # q(s_t, a_t, w_t+1)\n",
+    "                scores = self.theta.T @ current_vector\n",
+    "                probs = np.exp(scores) / np.sum(np.exp(scores))  # softmax 概率\n",
+    "                # 将 probs 的形状调整为与 state_vector 相匹配\n",
+    "                grad_ln_pi = current_vector - current_vector * probs.T# 策略梯度 (线性策略函数)\n",
+    "                grad_ln_pi = grad_ln_pi[:, 0]\n",
+    "                # 更新策略参数 theta\n",
+    "                self.theta[:, current_action] += self.alpha_t * Qsa * grad_ln_pi\n",
+    "\n",
+    "                # 统计当前episode的reward\n",
+    "                total_reward += reward\n",
+    "\n",
+    "                current_state = next_state\n",
+    "            if (k+1) % 100 == 0:\n",
+    "                print(f\"Episode {k+1}, Total reward: {total_reward}\")\n",
+    "        return self.weights, self.theta"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 4.模型的训练与结果展示"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 99, Total reward: 95\n",
-      "Episode 199, Total reward: 95\n",
-      "Episode 299, Total reward: -101\n",
-      "Episode 399, Total reward: 95\n",
-      "Episode 499, Total reward: -101\n",
-      "Episode 599, Total reward: 95\n",
-      "Episode 699, Total reward: -102\n",
-      "Episode 799, Total reward: 95\n",
-      "Episode 899, Total reward: -101\n",
-      "Episode 999, Total reward: 93\n",
-      "Episode 1099, Total reward: 93\n",
-      "Episode 1199, Total reward: 95\n",
-      "Episode 1299, Total reward: 95\n",
-      "Episode 1399, Total reward: 95\n",
-      "Episode 1499, Total reward: 95\n",
-      "Episode 1599, Total reward: 94\n",
-      "Episode 1699, Total reward: 93\n",
-      "Episode 1799, Total reward: 94\n",
-      "Episode 1899, Total reward: 95\n",
-      "Episode 1999, Total reward: 95\n"
+      "Episode 100, Total reward: 3\n",
+      "Episode 200, Total reward: 5\n",
+      "Episode 300, Total reward: 5\n",
+      "Episode 400, Total reward: 4\n",
+      "Episode 500, Total reward: 4\n",
+      "Episode 600, Total reward: 5\n",
+      "Episode 700, Total reward: 5\n",
+      "Episode 800, Total reward: 0\n",
+      "Episode 900, Total reward: 5\n",
+      "Episode 1000, Total reward: 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\PasserByNaOH\\AppData\\Local\\Temp\\ipykernel_19656\\4248405599.py:49: RuntimeWarning: overflow encountered in exp\n",
+      "  probs = np.exp(scores) / np.sum(np.exp(scores))  # softmax 概率\n",
+      "C:\\Users\\PasserByNaOH\\AppData\\Local\\Temp\\ipykernel_19656\\4248405599.py:49: RuntimeWarning: invalid value encountered in divide\n",
+      "  probs = np.exp(scores) / np.sum(np.exp(scores))  # softmax 概率\n"
      ]
     }
    ],
    "source": [
     "env = myFrozenLake()\n",
-    "agent = REINFORCEAgent(env)\n",
-    "theta = agent.Training()"
+    "agent = QACAgent(env)\n",
+    "weights, theta = agent.Training()"
    ],
    "metadata": {
     "collapsed": false
@@ -216,13 +220,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([1, 1, 1, 2, 1, 0, 2, 0, 2, 1, 1, 0, 0, 2, 2, 0])"
+      "text/plain": "array([[-1.69194779,  0.02926512, -0.05755918, -1.28744516],\n       [-2.67594328, -9.61847958,  1.68049076, -0.61277494],\n       [-1.51447187,  3.1391581 , -2.44608972,  0.44995154],\n       [-0.35128951, -5.6953279 , -2.17337292, -2.11192504],\n       [-0.27878417,  1.54489547, -9.57608842, -3.27045716],\n       [ 0.        ,  0.        ,  0.        ,  0.        ],\n       [-7.45813417,  3.83237988, -6.86189404,  0.54350535],\n       [ 0.        ,  0.        ,  0.        ,  0.        ],\n       [ 1.18279776, -8.78423345,  2.86611381, -1.41141096],\n       [ 1.1821243 ,  3.36610981,  4.61281515, -8.49905365],\n       [ 3.13087018,  7.68205976, -8.78423345,  3.40165277],\n       [ 0.        ,  0.        ,  0.        ,  0.        ],\n       [ 0.        ,  0.        ,  0.        ,  0.        ],\n       [-2.71      , -0.199     ,  7.35547351, -0.224758  ],\n       [ 4.08607013,  6.48075082, 10.        ,  4.78525789],\n       [ 0.        ,  0.        ,  0.        ,  0.        ]])"
      },
-     "execution_count": 8,
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[-3.27817526e+01, -3.11038716e+01, -2.83628160e+01,\n        -3.60874977e+01],\n       [-1.19859275e+01, -1.92523913e+01,  4.45827000e+01,\n        -1.11492676e+01],\n       [-3.83399277e+00,  1.05270677e+02, -3.87694299e+00,\n        -2.76707508e+00],\n       [-1.74462800e+00, -1.91725735e+00, -1.83044713e+00,\n        -1.97967786e+00],\n       [-9.85663900e+00,  7.01101930e+01, -1.86379702e+01,\n        -1.01031428e+01],\n       [ 2.50000000e-01,  2.50000000e-01,  2.50000000e-01,\n         2.50000000e-01],\n       [-5.78465514e+00,  1.82145991e+02, -4.48492791e+00,\n        -6.93770414e-02],\n       [ 2.50000000e-01,  2.50000000e-01,  2.50000000e-01,\n         2.50000000e-01],\n       [-1.22888335e+00, -1.11558835e+01,  1.64005742e+02,\n        -4.05168020e+00],\n       [ 5.42388940e-01,  2.16553789e+00,  2.58912011e+02,\n        -1.00282423e+01],\n       [ 4.84529510e+00,  6.19826236e+02, -1.18194095e+01,\n         4.67762430e+00],\n       [ 2.50000000e-01,  2.50000000e-01,  2.50000000e-01,\n         2.50000000e-01],\n       [ 2.50000000e-01,  2.50000000e-01,  2.50000000e-01,\n         2.50000000e-01],\n       [-2.66497522e-01,  2.27192560e-01,  1.79222391e+01,\n         2.24510399e-01],\n       [ 3.85598596e+00,  7.01192463e+00,  8.36632037e+02,\n         6.83881392e+00],\n       [ 2.50000000e-01,  2.50000000e-01,  2.50000000e-01,\n         2.50000000e-01]])"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([2, 2, 1, 0, 1, 0, 1, 0, 2, 2, 1, 0, 0, 2, 2, 0])"
+     },
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "outputs": [
     {
      "data": {
@@ -275,15 +319,6 @@
     "        env.show()\n",
     "play(env, best_Policy)"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
