--- a/8_ActorCrtic/determinstic_A2C.ipynb
+++ b/8_ActorCrtic/determinstic_A2C.ipynb
@@ -3,14 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# REINFORCE算法\n",
-    "## 1.环境设置\n",
-    "本次环境设置\n",
-    "代理agent\n",
-    "- 停止条件：撞墙（可去）-100分，掉坑-100分，到达终点+100分\n",
-    "- 每走一步-1分\n",
-    "- gamma=0.99，学习率（步长）alpha=0.01\n",
-    "- 训练轮数2000轮"
+    "# Determinstic A2C算法\n",
+    "## 1.环境设置"
    ],
    "metadata": {
     "collapsed": false
@@ -18,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 176,
    "outputs": [],
    "source": [
     "import random\n",
@@ -54,21 +48,20 @@
     "\n",
     "        # 判断是否撞墙\n",
     "        if state == current_state:\n",
-    "            reward = -100  # 撞墙扣10分\n",
-    "            # 相比于之前的实验，添加撞墙也会停止\n",
-    "            # 若不添加，agent就会一直撞墙，也不敢往其他地方走\n",
-    "            # over = True\n",
+    "            reward = -100  # 撞墙扣100分并停止\n",
+    "            over = True\n",
     "\n",
     "        #走一步扣一分,逼迫机器人尽快结束游戏\n",
     "        if not over:\n",
     "            reward = -1\n",
     "\n",
-    "        #掉坑扣100分，游戏它本身规则就是掉坑就停止\n",
+    "\n",
+    "        #掉坑扣10分，游戏它本身规则就是掉坑就停止\n",
     "        if over and reward == 0:\n",
     "            reward = -100\n",
     "\n",
     "        # 判断是否到达终点\n",
-    "        if over and reward == 1:  # 终点奖励本来就是1\n",
+    "        if over and reward == 1:\n",
     "            reward = 100  # 到达终点加10分\n",
     "\n",
     "        return state, reward, over\n",
@@ -87,16 +80,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 2.REINFORCE算法代理的设置\n",
-    "算法核心公式\n",
-    "$$\n",
-    "\\theta_{t+1} =\\theta_{t}+\\alpha\\nabla_{\\theta}\\ln\\pi(a_t|s_t,\\theta_t)q_{t}(s_t,a_t)\n",
-    "$$\n",
-    "其中，\n",
-    "- $\\theta$表示权重\n",
-    "- $\\alpha$表示学习率\n",
-    "- $\\nabla_{\\theta}\\ln\\pi(a_t|s_t,\\theta_t)$表示权重的梯度，本次实验使用线性方法并采用softmax得到\n",
-    "- $q_{t}(s_t,a_t)$当前状态的动作值"
+    "## 2.Determinstic A2C的代理设置"
    ],
    "metadata": {
     "collapsed": false
@@ -104,62 +88,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 177,
    "outputs": [],
    "source": [
-    "class REINFORCEAgent:\n",
-    "    def __init__(self, gameEnv, iterationNum=2000, epsilon=0.1, gamma=0.99, alpha=0.01):\n",
-    "        self.Env = gameEnv\n",
-    "        self.state_size = gameEnv.observation_space.n\n",
-    "        self.action_size = gameEnv.action_space.n\n",
-    "        self.iterNum = iterationNum\n",
-    "        self.epsilon = epsilon\n",
+    "class DA2CAgent:\n",
+    "    def __init__(self, gameEnv, episodes=1000, gamma=0.99, alpha=0.1):\n",
+    "        self.state_dim = gameEnv.observation_space.n\n",
+    "        self.action_dim = gameEnv.action_space.n\n",
     "        self.gamma = gamma\n",
-    "        self.alpha = alpha\n",
+    "        self.alpha_w = alpha\n",
+    "        self.alpha_t = alpha\n",
+    "        self.Env = gameEnv\n",
+    "        self.episodes = episodes\n",
+    "        self.weights = np.zeros(self.state_dim)\n",
+    "        self.theta = np.ones((self.state_dim, self.action_dim)) * 0.25\n",
     "\n",
-    "        # 定义策略权重θ\n",
-    "        self.theta = np.zeros((16, 4))\n",
     "\n",
-    "    def select_action(self, current_state):\n",
-    "        if random.random() < self.epsilon:\n",
-    "            return random.randrange(self.action_size)\n",
-    "        else:\n",
-    "            current_state_vector = np.eye(self.state_size)[current_state].reshape(-1, 1)\n",
-    "            return np.argmax(self.theta.T @ current_state_vector)\n",
+    "    # 由于要用target网络选取动作得到当前状态动作值，所以用以下函数来选择动作，在笔记中表示为μ函数\n",
+    "    def choose_action(self, state):\n",
+    "        # 使用softMax选取动作\n",
+    "        action_probs = np.exp(self.theta[state, :]) / np.sum(np.exp(self.theta[state, :]))\n",
+    "        action = np.argmax(action_probs)  # 选择概率最大的动作\n",
+    "        return action\n",
     "\n",
     "    def generate_episode(self):\n",
-    "        state_list, action_list, reward_list, next_state_list = [], [], [], []\n",
+    "        state, action, reward, next_state = [], [], [], []\n",
     "        done = False\n",
+    "        # 每一次训练都生成一个随机的策略\n",
     "        s = self.Env.reset()\n",
     "        while not done:\n",
-    "            a = self.select_action(s)\n",
+    "\n",
+    "            # 用μ，即target策略得到当前动作\n",
+    "            a = self.choose_action(s)\n",
+    "\n",
+    "            # 获得下一步数据\n",
     "            ns, r, done = self.Env.step(a)\n",
-    "            state_list.append(s)\n",
-    "            action_list.append(a)\n",
-    "            reward_list.append(r)\n",
-    "            next_state_list.append(ns)\n",
+    "            state.append(s)\n",
+    "            action.append(a)\n",
+    "            reward.append(r)\n",
+    "            next_state.append(ns)\n",
+    "\n",
     "            s = ns\n",
-    "        return state_list, action_list, reward_list, next_state_list\n",
+    "        return state, action, reward, next_state\n",
+    "\n",
     "\n",
     "    def Training(self):\n",
-    "        for k in range(self.iterNum):\n",
-    "            state_list, action_list, reward_list, next_state_list = self.generate_episode()\n",
-    "            Qsa = 0\n",
-    "            for t in range(len(state_list)):\n",
-    "                # 值更新\n",
-    "                Qsa += self.gamma ** (k - t) * reward_list[t]\n",
-    "                # 策略更新\n",
-    "                state_vector = np.eye(self.state_size)[state_list[t]].reshape(-1, 1)\n",
-    "                scores = self.theta.T @ state_vector\n",
-    "                probs = np.exp(scores) / np.sum(np.exp(scores))  # softmax 概率\n",
-    "                # 将 probs 的形状调整为与 state_vector 相匹配\n",
-    "                grad_ln_pi = state_vector - state_vector * probs.T# 策略梯度 (线性策略函数)\n",
+    "        for k in range(self.episodes):\n",
+    "\n",
+    "            current_state_list, current_action_list, reward_list, next_state_list = self.generate_episode()\n",
+    "            for step in range(len(current_action_list)):\n",
+    "                # 构造当前状态和下一个状态的特征向量\n",
+    "\n",
+    "                current_vector = np.eye(self.state_dim)[current_state_list[step]].reshape(-1, 1)\n",
+    "                next_vector = np.eye(self.state_dim)[next_state_list[step]].reshape(-1, 1)\n",
+    "\n",
+    "                # 计算td error，也就是δ_t\n",
+    "                td_target = reward_list[step] + self.gamma * np.dot(next_vector.T, self.weights)\n",
+    "                td_error = td_target - np.dot(current_vector.T, self.weights)\n",
+    "\n",
+    "                # Critic（值更新）\n",
+    "                self.weights += self.alpha_w * td_error * current_vector.flatten()\n",
+    "\n",
+    "                # Actor（策略更新）\n",
+    "                scores = self.theta.T @ current_vector\n",
+    "                probs = np.exp(scores) / np.sum(np.exp(scores))\n",
+    "                grad_ln_pi = current_vector - current_vector * probs.T# 策略梯度 (线性策略函数)\n",
     "                grad_ln_pi = grad_ln_pi[:, 0]\n",
     "                # 更新策略参数 theta\n",
-    "                self.theta[:, action_list[t]] += self.alpha * Qsa * grad_ln_pi\n",
-    "            if (k+1) % 100 == 0:\n",
-    "                print(f\"Episode {k}, Total reward: {sum(reward_list)}\")\n",
-    "        return self.theta"
+    "                self.theta[:, current_action_list[step]] += self.alpha_t * td_error * grad_ln_pi\n",
+    "\n",
+    "        return self.weights, self.theta"
    ],
    "metadata": {
     "collapsed": false
@@ -168,7 +166,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 3.模型的训练与结果展示"
+    "## 3.模型训练与结果展示"
    ],
    "metadata": {
     "collapsed": false
@@ -176,39 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode 99, Total reward: 95\n",
-      "Episode 199, Total reward: 95\n",
-      "Episode 299, Total reward: -101\n",
-      "Episode 399, Total reward: 95\n",
-      "Episode 499, Total reward: -101\n",
-      "Episode 599, Total reward: 95\n",
-      "Episode 699, Total reward: -102\n",
-      "Episode 799, Total reward: 95\n",
-      "Episode 899, Total reward: -101\n",
-      "Episode 999, Total reward: 93\n",
-      "Episode 1099, Total reward: 93\n",
-      "Episode 1199, Total reward: 95\n",
-      "Episode 1299, Total reward: 95\n",
-      "Episode 1399, Total reward: 95\n",
-      "Episode 1499, Total reward: 95\n",
-      "Episode 1599, Total reward: 94\n",
-      "Episode 1699, Total reward: 93\n",
-      "Episode 1799, Total reward: 94\n",
-      "Episode 1899, Total reward: 95\n",
-      "Episode 1999, Total reward: 95\n"
-     ]
-    }
-   ],
+   "execution_count": 178,
+   "outputs": [],
    "source": [
     "env = myFrozenLake()\n",
-    "agent = REINFORCEAgent(env)\n",
-    "theta = agent.Training()"
+    "# 生成一个随机的behaviorPolicy，并归一化\n",
+    "agent = DA2CAgent(env)\n",
+    "weights, theta = agent.Training()"
    ],
    "metadata": {
     "collapsed": false
@@ -216,13 +188,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 179,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([1, 1, 1, 2, 1, 0, 2, 0, 2, 1, 1, 0, 0, 2, 2, 0])"
+      "text/plain": "array([[-11.98515233, 130.71510291,  -9.27402186,  -9.72647359],\n       [-22.76129906, -12.39290458, -10.71501964,  -9.71786502],\n       [-18.04272932, -13.72485962, -15.42432372, -19.66719426],\n       [-26.39231121, -18.77729164, -19.64628232, -19.64625809],\n       [ -7.25      , 121.03919433,  -8.71487492,  -9.45220048],\n       [  0.25      ,   0.25      ,   0.25      ,   0.25      ],\n       [-12.70648976, -14.33934294, -12.57491731, -15.53927366],\n       [  0.25      ,   0.25      ,   0.25      ,   0.25      ],\n       [ -7.25      ,  -8.74834105, 113.30911517,   0.25      ],\n       [-22.64369388, 119.76836133,   0.25      ,   0.25      ],\n       [ -1.56975333,  -0.51940888,  -8.82918582,  -1.24586146],\n       [  0.25      ,   0.25      ,   0.25      ,   0.25      ],\n       [  0.25      ,   0.25      ,   0.25      ,   0.25      ],\n       [ -7.25      ,  -9.73815857, 118.23926116,   0.25      ],\n       [ -0.5675    ,  -8.4660926 , 109.32958795,   0.25      ],\n       [  0.25      ,   0.25      ,   0.25      ,   0.25      ]])"
      },
-     "execution_count": 8,
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([1, 3, 1, 1, 1, 0, 2, 0, 2, 1, 1, 0, 0, 2, 2, 0])"
+     },
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 181,
    "outputs": [
     {
      "data": {
@@ -275,15 +267,6 @@
     "        env.show()\n",
     "play(env, best_Policy)"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
