--- a/8_ActorCrtic/A2C.ipynb
+++ b/8_ActorCrtic/A2C.ipynb
@@ -3,14 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# REINFORCE算法\n",
-    "## 1.环境设置\n",
-    "本次环境设置\n",
-    "代理agent\n",
-    "- 停止条件：撞墙（可去）-100分，掉坑-100分，到达终点+100分\n",
-    "- 每走一步-1分\n",
-    "- gamma=0.99，学习率（步长）alpha=0.01\n",
-    "- 训练轮数2000轮"
+    "# A2C算法\n",
+    "## 1.环境设置"
    ],
    "metadata": {
     "collapsed": false
@@ -54,10 +48,8 @@
     "\n",
     "        # 判断是否撞墙\n",
     "        if state == current_state:\n",
-    "            reward = -100  # 撞墙扣10分\n",
-    "            # 相比于之前的实验，添加撞墙也会停止\n",
-    "            # 若不添加，agent就会一直撞墙，也不敢往其他地方走\n",
-    "            # over = True\n",
+    "            reward = -10  # 撞墙扣100分\n",
+    "            over = True\n",
     "\n",
     "        #走一步扣一分,逼迫机器人尽快结束游戏\n",
     "        if not over:\n",
@@ -65,11 +57,11 @@
     "\n",
     "        #掉坑扣100分，游戏它本身规则就是掉坑就停止\n",
     "        if over and reward == 0:\n",
-    "            reward = -100\n",
+    "            reward = -10\n",
     "\n",
     "        # 判断是否到达终点\n",
     "        if over and reward == 1:  # 终点奖励本来就是1\n",
-    "            reward = 100  # 到达终点加10分\n",
+    "            reward = 10  # 到达终点加10分\n",
     "\n",
     "        return state, reward, over\n",
     "\n",
@@ -87,16 +79,18 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 2.REINFORCE算法代理的设置\n",
-    "算法核心公式\n",
-    "$$\n",
-    "\\theta_{t+1} =\\theta_{t}+\\alpha\\nabla_{\\theta}\\ln\\pi(a_t|s_t,\\theta_t)q_{t}(s_t,a_t)\n",
-    "$$\n",
-    "其中，\n",
-    "- $\\theta$表示权重\n",
-    "- $\\alpha$表示学习率\n",
-    "- $\\nabla_{\\theta}\\ln\\pi(a_t|s_t,\\theta_t)$表示权重的梯度，本次实验使用线性方法并采用softmax得到\n",
-    "- $q_{t}(s_t,a_t)$当前状态的动作值"
+    "## 2.A2C Agent的设置\n",
+    "其中计算使用的公式\n",
+    "\n",
+    "- TD error\n",
+    "$$\\delta_t = r_{t+1} + \\gamma v(s_{t+1}, w_t) - v(s_t, w_t)$$\n",
+    "- Critic(值更新)：此时weights中记录的是状态值而不是动作值\n",
+    "$$w_{t+1} = w_t + \\alpha_w \\delta_t \\nabla_w v(s_t, w_t)$$\n",
+    "- Actor(策略更新)：相比于QAC，计算时去掉了Q，而乘上了TD error\n",
+    "$$\\theta_{t+1} = \\theta_t + \\alpha_{\\theta} \\delta_t \\nabla_{\\theta} \\ln \\pi(s_t, w_t)$$\n",
+    "- 本实验使用的使线性函数近似，所以\n",
+    "    - $\\nabla_w v(s_t, w_t) = v(s_t)$\n",
+    "    - $\\nabla_{\\theta} \\ln \\pi(s_t, w_t) = softmax(v(s_t))$"
    ],
    "metadata": {
     "collapsed": false
@@ -104,62 +98,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "class REINFORCEAgent:\n",
-    "    def __init__(self, gameEnv, iterationNum=2000, epsilon=0.1, gamma=0.99, alpha=0.01):\n",
-    "        self.Env = gameEnv\n",
-    "        self.state_size = gameEnv.observation_space.n\n",
-    "        self.action_size = gameEnv.action_space.n\n",
-    "        self.iterNum = iterationNum\n",
-    "        self.epsilon = epsilon\n",
+    "class A2CAgent:\n",
+    "    def __init__(self, gameEnv, episodes=200, gamma=0.9, epsilon=0.1, alpha=0.1):\n",
+    "        self.state_dim = gameEnv.observation_space.n\n",
+    "        self.action_dim = gameEnv.action_space.n\n",
     "        self.gamma = gamma\n",
-    "        self.alpha = alpha\n",
+    "        self.alpha_w = alpha\n",
+    "        self.alpha_t = alpha\n",
+    "        self.epsilon = epsilon\n",
+    "        self.Env = gameEnv\n",
+    "        self.episodes = episodes\n",
+    "        # 统计每一个状态下每一个动作下的状态值\n",
+    "        self.weights = np.zeros(self.state_dim)\n",
+    "        # 统计每个状态采取一个动作的概率\n",
+    "        self.theta = np.ones((self.state_dim, self.action_dim)) * 0.25\n",
     "\n",
-    "        # 定义策略权重θ\n",
-    "        self.theta = np.zeros((16, 4))\n",
-    "\n",
-    "    def select_action(self, current_state):\n",
+    "    def select_action(self, current_state_vector):\n",
     "        if random.random() < self.epsilon:\n",
-    "            return random.randrange(self.action_size)\n",
+    "            return random.randrange(self.action_dim)\n",
     "        else:\n",
-    "            current_state_vector = np.eye(self.state_size)[current_state].reshape(-1, 1)\n",
     "            return np.argmax(self.theta.T @ current_state_vector)\n",
     "\n",
-    "    def generate_episode(self):\n",
-    "        state_list, action_list, reward_list, next_state_list = [], [], [], []\n",
-    "        done = False\n",
-    "        s = self.Env.reset()\n",
-    "        while not done:\n",
-    "            a = self.select_action(s)\n",
-    "            ns, r, done = self.Env.step(a)\n",
-    "            state_list.append(s)\n",
-    "            action_list.append(a)\n",
-    "            reward_list.append(r)\n",
-    "            next_state_list.append(ns)\n",
-    "            s = ns\n",
-    "        return state_list, action_list, reward_list, next_state_list\n",
-    "\n",
     "    def Training(self):\n",
-    "        for k in range(self.iterNum):\n",
-    "            state_list, action_list, reward_list, next_state_list = self.generate_episode()\n",
-    "            Qsa = 0\n",
-    "            for t in range(len(state_list)):\n",
-    "                # 值更新\n",
-    "                Qsa += self.gamma ** (k - t) * reward_list[t]\n",
-    "                # 策略更新\n",
-    "                state_vector = np.eye(self.state_size)[state_list[t]].reshape(-1, 1)\n",
-    "                scores = self.theta.T @ state_vector\n",
+    "        for k in range(self.episodes):\n",
+    "            # 一步一步生成episode\n",
+    "            # 生成初始状态向量\n",
+    "            current_state = self.Env.reset()\n",
+    "            done = False\n",
+    "            total_reward = 0\n",
+    "            while not done:\n",
+    "\n",
+    "                # 获取当前动作\n",
+    "                current_vector = np.eye(self.state_dim)[current_state].reshape(-1, 1)\n",
+    "                current_action = self.select_action(current_vector)\n",
+    "                # 获得下一步数据\n",
+    "                next_state, reward, done = self.Env.step(current_action)\n",
+    "                # 得到下一个动作\n",
+    "                next_vector = np.eye(self.state_dim)[next_state].reshape(-1, 1)\n",
+    "\n",
+    "                # Critic（值估计）\n",
+    "                td_target = reward + self.gamma * np.dot(next_vector.T, self.weights)\n",
+    "                td_error = td_target - np.dot(current_vector.T, self.weights)\n",
+    "                # 更新权重\n",
+    "                self.weights += self.alpha_w * (td_error * current_vector).flatten()\n",
+    "\n",
+    "                # Actor(策略更新)\n",
+    "                scores = self.theta.T @ current_vector\n",
     "                probs = np.exp(scores) / np.sum(np.exp(scores))  # softmax 概率\n",
     "                # 将 probs 的形状调整为与 state_vector 相匹配\n",
-    "                grad_ln_pi = state_vector - state_vector * probs.T# 策略梯度 (线性策略函数)\n",
+    "                grad_ln_pi = current_vector - current_vector * probs.T# 策略梯度 (线性策略函数)\n",
     "                grad_ln_pi = grad_ln_pi[:, 0]\n",
     "                # 更新策略参数 theta\n",
-    "                self.theta[:, action_list[t]] += self.alpha * Qsa * grad_ln_pi\n",
-    "            if (k+1) % 100 == 0:\n",
-    "                print(f\"Episode {k}, Total reward: {sum(reward_list)}\")\n",
-    "        return self.theta"
+    "                self.theta[:, current_action] += self.alpha_t * td_error * grad_ln_pi\n",
+    "\n",
+    "                # 统计当前episode的reward\n",
+    "                total_reward += reward\n",
+    "\n",
+    "                current_state = next_state\n",
+    "            if (k+1) % 10 == 0:\n",
+    "                print(f\"Episode {k+1}, Total reward: {total_reward}\")\n",
+    "        return self.weights, self.theta"
    ],
    "metadata": {
     "collapsed": false
@@ -176,39 +177,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 99, Total reward: 95\n",
-      "Episode 199, Total reward: 95\n",
-      "Episode 299, Total reward: -101\n",
-      "Episode 399, Total reward: 95\n",
-      "Episode 499, Total reward: -101\n",
-      "Episode 599, Total reward: 95\n",
-      "Episode 699, Total reward: -102\n",
-      "Episode 799, Total reward: 95\n",
-      "Episode 899, Total reward: -101\n",
-      "Episode 999, Total reward: 93\n",
-      "Episode 1099, Total reward: 93\n",
-      "Episode 1199, Total reward: 95\n",
-      "Episode 1299, Total reward: 95\n",
-      "Episode 1399, Total reward: 95\n",
-      "Episode 1499, Total reward: 95\n",
-      "Episode 1599, Total reward: 94\n",
-      "Episode 1699, Total reward: 93\n",
-      "Episode 1799, Total reward: 94\n",
-      "Episode 1899, Total reward: 95\n",
-      "Episode 1999, Total reward: 95\n"
+      "Episode 10, Total reward: -13\n",
+      "Episode 20, Total reward: -13\n",
+      "Episode 30, Total reward: -12\n",
+      "Episode 40, Total reward: 5\n",
+      "Episode 50, Total reward: 3\n",
+      "Episode 60, Total reward: 5\n",
+      "Episode 70, Total reward: -15\n",
+      "Episode 80, Total reward: 5\n",
+      "Episode 90, Total reward: 3\n",
+      "Episode 100, Total reward: 5\n",
+      "Episode 110, Total reward: 5\n",
+      "Episode 120, Total reward: -10\n",
+      "Episode 130, Total reward: 5\n",
+      "Episode 140, Total reward: 5\n",
+      "Episode 150, Total reward: 5\n",
+      "Episode 160, Total reward: 5\n",
+      "Episode 170, Total reward: 5\n",
+      "Episode 180, Total reward: 3\n",
+      "Episode 190, Total reward: 5\n",
+      "Episode 200, Total reward: 5\n"
      ]
     }
    ],
    "source": [
     "env = myFrozenLake()\n",
-    "agent = REINFORCEAgent(env)\n",
-    "theta = agent.Training()"
+    "agent = A2CAgent(env)\n",
+    "weights, theta = agent.Training()"
    ],
    "metadata": {
     "collapsed": false
@@ -216,13 +217,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([1, 1, 1, 2, 1, 0, 2, 0, 2, 1, 1, 0, 0, 2, 2, 0])"
+      "text/plain": "array([-0.22136762,  1.84099355,  3.4735945 , -3.30723521, -4.15508474,\n        0.        ,  5.24182406,  0.        , -4.19275921, -0.17052346,\n        6.910212  ,  0.        ,  0.        , -0.3002268 ,  8.11090079,\n        0.        ])"
      },
-     "execution_count": 8,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[-5.8930256 , -2.29482335, 13.42850878, -3.58875162],\n       [-0.4299192 , -2.63125607,  9.63194709, -3.16915476],\n       [-1.60223698, 13.47555377, -0.8353816 , -6.11869346],\n       [ 0.43099029, -0.93477679, -0.47272178, -0.41814461],\n       [-1.21632112, -0.55174315, -0.9586982 ,  0.50299035],\n       [ 0.25      ,  0.25      ,  0.25      ,  0.25      ],\n       [-4.7233744 , 14.81143665, -1.82117345, -1.7149355 ],\n       [ 0.25      ,  0.25      ,  0.25      ,  0.25      ],\n       [-2.15553766, -0.51712313,  0.28191618, -0.04164152],\n       [ 0.1075    ,  0.07948664,  1.81893099, -1.10091011],\n       [-2.79853374, 13.52387822, -2.26999335, -0.80612694],\n       [ 0.25      ,  0.25      ,  0.25      ,  0.25      ],\n       [ 0.25      ,  0.25      ,  0.25      ,  0.25      ],\n       [-0.5       , -0.60532445,  1.70345112,  0.25      ],\n       [-2.27754199, -3.8039323 , 16.59484084, -1.81309545],\n       [ 0.25      ,  0.25      ,  0.25      ,  0.25      ]])"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([2, 2, 1, 0, 3, 0, 1, 0, 2, 2, 1, 0, 0, 2, 2, 0])"
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -275,15 +316,6 @@
     "        env.show()\n",
     "play(env, best_Policy)"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
